# sentinel-inject

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-npm.yml  publish-pypi.yml
docs/: index.html
examples/: example_agent_simulation.py  example_basic_python.py  observability_example.py
python/: README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
python/sentinel_inject/: __init__.py  llm_detector.py  middleware.py  observability.py  rules.py  sanitizer.py  scanner.py
python/sentinel_inject/integrations/: __init__.py  langchain.py  openai.py
python/tests/: test_additional_coverage.py  test_coverage_push.py  test_integrations_langchain.py  test_integrations_openai.py  test_llm_detector.py  test_middleware.py  test_rules.py  test_sanitizer.py  test_scanner.py
typescript/: package-lock.json  package.json
typescript/src/: index.ts  llmDetector.ts  middleware.ts  observability.ts  rules.ts  sanitizer.ts  scanner.ts
typescript/src/integrations/: openai.ts
